ES-343: Fix drinks layout on mobile

--- a/src/blocks/food-quiz/style.scss
+++ b/src/blocks/food-quiz/style.scss
@@ -258,7 +258,7 @@
 			gap: 16px;
 		}
 
-		.food-quiz__drink-options {
+		.food-quiz__drinks .food-quiz__drink-options {
 			grid-template-columns: repeat(2, 1fr);
 		}
 
